<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Latitude -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Szerokość geograficzna celu" />
    <EditText
        android:id="@+id/latEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_latitude"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Longitude -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Długość geograficzna celu" />
    <EditText
        android:id="@+id/lonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_longitude"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Range -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Zasięg (metry)" />
    <EditText
        android:id="@+id/rangeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_range"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Range -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mnożnik 'a' zasięgu przy pierwszym połączeniu a*range^2" />
    <EditText
        android:id="@+id/rangeAEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_range_a"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Phone -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Numer telefonu" />
    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- t1 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pierwsze połączenie po ... (sekundach) od uruchomienia" />
    <EditText
        android:id="@+id/t1Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_t1"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- t2 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kolejne połączenia po co najmniej ... (minutach)" />
    <EditText
        android:id="@+id/t2Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_t2"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- t3 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Wyłącz, gdy brak ładowania po ... (minutach)" />
    <EditText
        android:id="@+id/t3Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_t3"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/saveButton"
        android:text="@string/save_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/currentLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/lastCallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_call"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/showLogsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pokaż logi"
        android:layout_marginTop="16dp"/>
</LinearLayout>

</ScrollView>